# pipeline-js

./: .gitignore  .python-version  404.html  LICENSE  curl-format.txt  gen-certs.py  index.html  indexed-fs.js  kaz_hello.py  kazhttp.py  m  make-cert.bash  makefile  manifest.json  parse.js  pipeline-notes.service  proxy.cpp  pyproject.toml  run_test.sh  service-worker.js  simple_server.py  style.css  supervisor.py  test_client.py  tmux-debug.sh
assets/: LIST  boolean-state.js  calendar.js  components.js  date-util.js  elem.js  filedb.js  flatdb.js  global.js  index.html  indexed-fs.js  manifest.json  parse.js  ref.js  remote.js  render.js  rewrite.js  service-worker.js  state.js  status.js  style.css  sync.js
docker/: .gitignore  README.md  app.py  certs.Dockerfile  client.Dockerfile  docker-compose.yml  makefile  requirements_selenium.txt  server.Dockerfile  test.Dockerfile  test.py
scripts/: date-util.js  makefile  parse-unparse.js  parse.js  reformat-test.js  reformat-test.note  rewrite.js  unparse.js
testing/: .gitignore  AGENT_INSTRUCTIONS.md  README.md  __init__.py  browser_test_base.py  console_test.py  first_time_setup.py  makefile  manual.py  requirements.txt  test.py  test_manual.py  test_message_edit.py  test_message_rendering.py  test_render.py  test_render_functions.py  test_runner.py  test_search_immediate.py  test_search_timing_bug.py  test_util.py  test_with_data.py
testing/tests/: __init__.py  first_time_interaction.py  first_time_setup.py  message_rendering.py  new_day_double_journal.py  search_duplicates.py  sync_on_network_failure.py
(+7 files in other folders)
