[project]
name = "pipeline-js"
version = "0.1.0"
description = "Pipeline Notes JavaScript/TypeScript application with Python testing"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
testing = [
    "pytest-playwright",
    "playwright==1.42.0",
]
visual = [
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = []
exclude = ["*"]

[tool.uv]
dev-dependencies = []

